<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/permissions_container"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:visibility="gone"
  tools:visibility="visible">

  <TextView
    android:id="@+id/permissions_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimension_large"
    android:layout_marginVertical="@dimen/dimension_medium"
    android:textColor="@color/vivyRed"
    android:gravity="center"
    android:text="@string/permissions_message" />

  <Button
    android:id="@+id/permissions_grant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimension_large"
    android:layout_marginVertical="@dimen/dimension_medium"
    android:text="@string/permissions_grant" />

  <Button
    android:id="@+id/permissions_ignore"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimension_large"
    android:layout_marginVertical="@dimen/dimension_medium"
    android:text="@string/permissions_ignore" />

</LinearLayout>