<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center">

  <EditText
    android:id="@+id/search_doctor_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimension_large"
    android:layout_marginVertical="@dimen/dimension_medium"
    android:autofillHints="name"
    android:hint="@string/search_doctor_hint"
    android:inputType="text"
    android:textColor="@color/vivyGrey"
    android:textSize="@dimen/text_xlarge"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

  <ImageView
    android:id="@+id/search_doctor_clear_input"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_action_delete"
    android:contentDescription="@string/search_doctor_image_description_clear"
    android:visibility="gone"
    app:layout_constraintTop_toTopOf="@id/search_doctor_input"
    app:layout_constraintBottom_toBottomOf="@id/search_doctor_input"
    app:layout_constraintEnd_toEndOf="@id/search_doctor_input"
    tools:visibility="visible" />

  <ProgressBar
    android:id="@+id/search_doctor_progress_bar"
    android:layout_width="@dimen/layout_small"
    android:layout_height="@dimen/layout_small"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/dimension_large"
    android:visibility="gone"
    app:layout_constraintTop_toTopOf="@id/search_doctor_input"
    app:layout_constraintBottom_toBottomOf="@id/search_doctor_input"
    app:layout_constraintEnd_toStartOf="@id/search_doctor_clear_input"
    tools:visibility="visible" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/search_doctor_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginHorizontal="@dimen/dimension_large"
    android:layout_marginVertical="@dimen/dimension_medium"
    app:layout_constraintTop_toBottomOf="@id/search_doctor_input"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

  <TextView
    android:id="@+id/search_doctor_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimension_large"
    android:layout_marginVertical="@dimen/dimension_medium"
    android:gravity="center"
    android:visibility="gone"
    android:text="@string/search_doctor_no_results"
    app:layout_constraintTop_toBottomOf="@id/search_doctor_input"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/search_doctor_location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimension_large"
    android:gravity="start"
    android:padding="@dimen/dimension_medium"
    android:background="@color/vivyBlack"
    android:textSize="@dimen/text_small"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="Location=ON\nlat=12.123\nlng=1234" />

</androidx.constraintlayout.widget.ConstraintLayout>